--- a/resource/views/layout.html
+++ b/resource/views/layout.html
@@ -26,13 +26,18 @@
                  <li class="nav-item">
                      <a class="nav-link" href="/contacto">Contacto</a>
                  </li>
+                 <li class="nav-item">
+                     <a class="nav-link" href="/users">Lista de Usuarios</a>
+                 </li>
+
+
              </ul>
          </div>
      </nav>
      <div id="content">{% block content %}{% endblock %}
      </div>
           <div id="footer">    {% block footer %}
-             <hr />    &copy; GeeksHubs Academy, 2019.    {% endblock %}
+             <hr />    &copy; David Motos, 2019.    {% endblock %}
           </div>
      </body>
 </html>
